# youbot-stack

./: .gitignore  .gitmodules  CMakeLists.txt  README  debug.launch  eclipse.cmake  launch.sh  stack.xml
DataTracer/: CMakeLists.txt  README  deploy.ops  example_deploy.ops  manifest.xml  traces.ops
DataTracer/src/: CMakeLists.txt  CSVFileWriter.cpp  CSVFileWriter.hpp  DTFactory.hpp  DTTypes.hpp  ITraceTuple.hpp  Sink.cpp  Sink.hpp
SOEM/: INSTALL
YouBot_OODL/: CMakeLists.txt  README  debug.launch  deploy.ops  deploy_with_monitor.ops  launch.sh  manifest.xml  plot.sh  run.sh
YouBot_OODL/examples/: CMakeLists.txt
YouBot_OODL/examples/DataTracer/: CMakeLists.txt  DataTracer.cpp  DataTracer.hpp  example_deploy.ops
YouBot_OODL/examples/EventLogger/: CMakeLists.txt  EventLogger.cpp  EventLogger.h
YouBot_OODL/examples/JoystickBase/: CMakeLists.txt  JoystickBase.cpp  JoystickBase.hpp  README  deploy.ops
YouBot_OODL/examples/test/: ArmControllerMockup.cpp  ArmControllerMockup.h  BaseControllerMockup.cpp  BaseControllerMockup.h  CMakeLists.txt  GripperControllerMockup.cpp  GripperControllerMockup.h  deploy.ops
YouBot_OODL/include/: YouBotArmService.h  YouBotArmService.hpp  YouBotBaseService.h  YouBotBaseService.hpp  YouBotGripperService.hpp  YouBotHelpers.h  YouBotHelpers.hpp  YouBotManipulatorService.hpp  YouBotOODL.h  YouBotOODL.hpp  YouBotService.hpp  YouBotTypes.hpp
YouBot_OODL/msg/: driver_event.msg  motor_statuses.msg
YouBot_OODL/src/: CMakeLists.txt  YouBotArmService.cpp  YouBotBaseService.cpp  YouBotGripperService.cpp  YouBotHelpers.cpp  YouBotHelpersPlugin.cpp  YouBotManipulatorService.cpp  YouBotOODL.cpp  YouBotService.cpp
YouBot_adapters/: CMakeLists.txt  mainpage.dox  manifest.xml
YouBot_adapters/HomogeneousToTF/: CMakeLists.txt  HomogeneousToTF.cpp
YouBot_adapters/TSimToYouBotMsg/: CMakeLists.txt  TSimToYouBotMsg.cpp  TSimToYouBotMsg.hpp
YouBot_adapters/YouBotMsgToTSim/: CMakeLists.txt  YouBotMsgToTSim.cpp  YouBotMsgToTSim.hpp
YouBot_adapters/YouBotOdometryToTSim/: CMakeLists.txt  YouBotOdometryToTSim.cpp  YouBotOdometryToTSim.hpp
YouBot_adapters/launch/: example.launch
YouBot_adapters/launch/orocos_deployment/: example.xml
YouBot_adapters/tests/: CMakeLists.txt  H2TF_oro_test.cpp  H2TF_test.cpp
YouBot_config/arm/: arm-2-parameter.cfg  arm-3-parameter.cfg  protected-arm-3-parameter.cfg
YouBot_configurator/: CMakeLists.txt  deploy.ops  manifest.xml
YouBot_configurator/config/: README
YouBot_configurator/config/arm/: arm-2-parameter.cfg  arm-3-parameter.cfg  arm-4-parameter.cfg  protected-arm-1-parameter.cfg  protected-arm-2-parameter.cfg  protected-arm-3-parameter.cfg  protected-arm-4-parameter.cfg  protected-arm-5-parameter.cfg
YouBot_configurator/config/base/: base-3-parameter.cfg  base.cfg  (+2 more)
YouBot_configurator/src/: CMakeLists.txt  YouBot_configurator.cpp  YouBot_configurator.hpp
YouBot_controllers/: 20sim_deploy.xml  deploy.ops  ros_connection.ops  rviz_H.xml  stack.xml
YouBot_controllers/YouBot_control/: CMakeLists.txt  Makefile  deploy.ops  manifest.xml
YouBot_controllers/config/: interaction_control_base_config.xml  interaction_control_base_config_test.xml
YouBot_controllers/deployment/: plot.sh
YouBot_controllers/interaction_control/: 20sim_deploy.xml  CMakeLists.txt  deploy.ops  local.cmake  manifest.xml  readme.txt  run.sh  test_interaction_control.cpp
YouBot_controllers/interaction_control/config/: 20sim_deploy.xml  interaction_control_base_config.xml  interaction_control_base_config.xml.bak
YouBot_controllers/interaction_control/include/: interaction_control.h
YouBot_controllers/interaction_control/include/common/: Adapter20Sim.h  EulerAngles.h  MotionProfiles.h  XVMatrix.h  xxfuncs.h  xxinverse.h  xxtypes.h
YouBot_controllers/interaction_control/launch/: 20sim_deploy.xml  deploy.ops  ros_connection.ops
YouBot_controllers/interaction_control/src/: interaction_control.cpp
YouBot_controllers/interaction_control/src/common/: Adapter20Sim.cpp  EulerAngles.cpp  MotionProfiles.cpp  XVmatrix.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp  xxfuncs.cpp  xxinteg.cpp  xxinverse.cpp
YouBot_controllers/interaction_control_test/: manifest.xml  readme.txt  test_interaction_control.cpp
YouBot_deployment/: CMakeLists.txt  manifest.xml  run.sh
YouBot_deployment/launch/: plots.launch
YouBot_deployment/rtt_deploy/: adapter_connections.ops  debug.sh  deploy.ops  deployMS.ops  deployRCC.ops  hf.ops  lf.ops  monitors.ops  new_deploy.ops  ros_connection.ops  run.sh
YouBot_executive/: CMakeLists.txt  README  deploy.ops  manifest.xml  run.sh
YouBot_executive/include/: ExecutiveHelpers.hpp  FlowControl.hpp  YouBot_configs.hpp  YouBot_executive.h
YouBot_executive/lua/: deploy.ops  fsm.lua  fsm_component.lua  test.lua  test_component.lua
YouBot_executive/src/: CMakeLists.txt  ExecutiveHelpers.cpp  FlowControl.cpp  YouBot_configs.cpp  YouBot_executive.cpp
YouBot_joystick/: README
YouBot_joystick/JoystickBase/: CMakeLists.txt  JoystickBase.cpp  JoystickBase.hpp  manifest.xml
YouBot_joystick/joystick_msgs/: CMakeLists.txt  manifest.xml
YouBot_messages/: CMakeLists.txt  OBSOLETE  README  YouBot_composites.hpp  YouBot_primitives.hpp  manifest.xml
YouBot_monitors/: CMakeLists.txt  deploy.ops  manifest.xml  monitor_config.ops  simple_test.ops
YouBot_monitors/include/: YouBotMonitor.hpp  YouBotMonitorHelpers.hpp  YouBotMonitorService.hpp  YouBotMonitorServiceHelpers.hpp  YouBotMonitorTypeInfos.hpp  YouBotMonitorTypes.hpp
YouBot_monitors/msg/: monitor_event.msg
YouBot_monitors/src/: CMakeLists.txt  YouBotMonitor.cpp  YouBotMonitorPlugin.cpp  YouBotMonitorService.cpp  YouBotMonitorServicePlugin.cpp  YouBotMonitorTypeInfos.cpp
joystick/: README  deploy.ops  load_jostick.ops  run.sh
joystick/YouBot_joystick/: CMakeLists.txt  manifest.xml
joystick/joystick_msgs/: CMakeLists.txt  manifest.xml
joystick/rtt_joy_msgs/: CMakeLists.txt  manifest.xml
joystick_msgs/: README
orocos_rospack_find/: CMakeLists.txt  manifest.xml  orocos_rospack_service.cpp  orocos_rospack_service.hpp  test.ops
(+45 files in other folders)
