INCLUDE_DIRECTORIES(${COMMON_INCLUDE_DIR} ${SOEM_INCLUDE_DIR} ${OODL_YOUBOT_INCLUDE_DIR})

SET(libYouBotOODL_libs
	${SOEM_LIBRARIES}
	${OODL_YOUBOT_LIBRARIES}
	boost_thread
	YouBot_OODL
)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

orocos_component(EventLogger EventLogger.h EventLogger.cpp ${COMMON_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(EventLogger ${libYouBotOODL_libs})
